# aseprite-mcp

./: .dockerignore  .env.example  AGENTS.md  COMPARISONS.md  DOCKER.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  LICENSE  README.md  ROADMAP.md  build-docker.ps1  build-docker.sh  docker-compose.yml  pyproject.toml  sample.env
.github/workflows/: docker-build.yml
aseprite_mcp/: __init__.py  __main__.py  mcp.py
aseprite_mcp/core/: __init__.py  commands.py  enums.py  utils.py  validation.py
aseprite_mcp/core/schemas/: outputs.py
aseprite_mcp/tools/: __init__.py  canvas.py  drawing.py  export.py
aseprite_mcp/tools/animation/: __init__.py  create_tag.py  set_frame_duration.py
aseprite_mcp/tools/canvas/: __init__.py  add_frame.py  add_layer.py  create_canvas.py  delete_frame.py  delete_layer.py  flatten_layers.py  get_sprite_info.py
aseprite_mcp/tools/drawing/: __init__.py  draw_circle.py  draw_line.py  draw_pixels.py  draw_rectangle.py  fill_area.py
aseprite_mcp/tools/export/: __init__.py  export_sprite.py
aseprite_mcp/tools/inspection/: __init__.py  get_pixels.py
aseprite_mcp/tools/palette/: __init__.py  add_palette_color.py  get_palette.py  set_palette.py  set_palette_color.py  sort_palette.py
aseprite_mcp/tools/selection/: __init__.py  deselect.py  move_selection.py  select_all.py  select_ellipse.py  select_rectangle.py
aseprite_mcp/tools/transform/: __init__.py  crop_sprite.py  flip_sprite.py  resize_canvas.py  rotate_sprite.py
scripts/: docker-entrypoint.sh  install-aseprite-steam.sh
